--- a/styles/editContactsResponsive.css
+++ b/styles/editContactsResponsive.css
@@ -42,13 +42,12 @@
   }
 
   .createContactButton {
-    margin-top: 120%;
     height: fit-content;
     margin-block-start: auto;
   }
 
   .cancelButton {
-    margin-top: 120%;
+    margin-top: 0;
   }
 }
 
@@ -141,6 +140,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 16px;
     width: 100%;
   }
 
